Disable generic effect paint property nodes for SPv1

We seem to have some under-invalidation of effect paint
properties. This CL avoids the bug for SPv1. We will fix the
bug in SPv175/SPv2.

Bug: 769769
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Iade52f8b1748318edacf959c872552278a116321
Reviewed-on: https://chromium-review.googlesource.com/690616
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#505274}
Former-commit-id: a4ea774e15887bec1533db047a739004f6817305